# django-pre-deploy-checks

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
tests/test_example/: test_some_function.py
